<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_alignParentBottom="true"
	android:layout_margin="@dimen/m_10dp">
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/prev"
		android:textColor="@color/_White"
		android:background="@color/_GREEN"
		android:textSize="@dimen/m_24sp"
		android:layout_alignParentLeft="true"
		android:id="@+id/backtoprev"
		android:padding="@dimen/m_10dp"
		android:onClick="onElementClick"/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/savesisn"
		android:textColor="@color/_White"
		android:background="@color/_GREEN"
		android:textSize="@dimen/m_24sp"
		android:layout_centerHorizontal="true"
		android:id="@+id/savephase"
		android:padding="@dimen/m_10dp"
		android:onClick="onElementClick"/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next"
		android:textColor="@color/_White"
		android:background="@color/_GREEN"
		android:textSize="@dimen/m_24sp"
		android:layout_alignParentRight="true"
		android:id="@+id/proctonext"
		android:padding="@dimen/m_10dp"
		android:onClick="onElementClick"/>
</RelativeLayout>