<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    tools:context="irishreloreportgen.activity.main.ListReports" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/_White"
        android:id="@+id/head_btn"
        android:padding="@dimen/m_10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ListView 
        android:layout_below="@+id/head_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m_10dp"
        android:layout_above="@+id/backwrap"
        android:id="@+id/listreport">
    </ListView>
	<RelativeLayout 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="@dimen/m_10dp"
		android:id="@+id/backwrap"
		android:layout_alignParentBottom="true">
        <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prev"
			android:textColor="@color/_White"
			android:background="@color/_GREEN"
			android:textSize="@dimen/m_24sp"
			android:layout_alignParentLeft="true"
			android:id="@+id/backtoprevpage"
			android:padding="@dimen/m_10dp"
			android:onClick="onElementClick"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exitlist"
			android:textColor="@color/_White"
			android:background="@color/_GREEN"
			android:textSize="@dimen/m_28sp"
			android:paddingLeft="@dimen/m_10dp"
			android:paddingRight="@dimen/m_10dp"
			android:layout_centerHorizontal="true"
			android:id="@+id/backtoprev"
			android:padding="@dimen/m_10dp"
			android:onClick="onElementClick"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next"
			android:textColor="@color/_White"
			android:background="@color/_GREEN"
			android:textSize="@dimen/m_24sp"
			android:layout_alignParentRight="true"
			android:id="@+id/proctonext"
			android:padding="@dimen/m_10dp"
			android:onClick="onElementClick"/>
	</RelativeLayout>
</RelativeLayout>
