<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
    android:background="@color/_GRAY">

   <irishreloreportgen.activity.main.Header
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/_White"
        android:id="@+id/head_btn" />

   <ScrollView
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/head_btn"
	    android:layout_above="@+id/navwraper">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/m_10dp">
		<RelativeLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@color/_GREEN"
			android:id="@+id/type_insp_sec"
			android:layout_marginBottom="@dimen/m_36dp"
			android:paddingLeft="@dimen/m_10dp"
			android:paddingRight="@dimen/m_10dp">
			<TextView
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:text="@string/addnew_rep"
		      	android:textSize="@dimen/m_24sp"
		      	android:textColor="@color/_White"
		      	android:layout_gravity="left|center_vertical"
		      	android:textStyle="bold"
		      	android:id="@+id/addeditbasic"
		      	android:textAllCaps="true"
		      	android:onClick="btntxtonClick"/>
			<ImageButton 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:background="@drawable/add_new_report_heading_icon"
		      	android:layout_alignParentRight="true"
		      	android:layout_centerVertical="true"
		      	android:contentDescription="@string/addnew_rep"/>
		 </RelativeLayout>
		 <RelativeLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="@dimen/m_10dp">
			<ImageButton 
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:background="@drawable/bullets_black"
		     	android:layout_centerVertical="true"
		     	android:contentDescription="@string/typeof_insplbl"
		     	android:id="@+id/typeof_insplbl"
		     	android:layout_marginRight="@dimen/m_10dp"/>
			<TextView
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:text="@string/typeof_insplbl"
		     	android:textSize="@dimen/m_24sp"
		     	android:textColor="@color/_Black"
		     	android:layout_gravity="center_vertical"
		     	android:textStyle="bold"
		     	android:textAllCaps="true"
		     	android:layout_toRightOf="@+id/typeof_insplbl"/>	
		  </RelativeLayout>
		  <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
			<TextView
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:text="@string/tenantlbl"
		     	android:textSize="@dimen/m_18sp"
		     	android:textColor="@color/_Black"
		     	android:layout_gravity="center_vertical"
		     	android:layout_marginBottom="@dimen/m_10dp"/>
			<EditText
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:textSize="@dimen/m_18sp"
		     	android:hint="@string/tenantlbl"
		     	android:layout_gravity="center_vertical"
		     	android:id="@+id/tenant"
		     	android:layout_marginBottom="@dimen/m_10dp"
		     	android:background="@color/_White"
		     	android:onClick="onElementClick"
		     	android:padding="@dimen/m_5dp" />

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" >

			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_marginBottom="@dimen/m_10dp"
			        android:text="@string/occupierlbl"
			        android:textColor="@color/_Black"
			        android:textSize="@dimen/m_18sp" />

			    <EditText
			        android:id="@+id/occupier"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_marginBottom="@dimen/m_10dp"
			        android:background="@color/_White"
			        android:hint="@string/occupierlbl"
			        android:onClick="onElementClick"
			        android:padding="@dimen/m_5dp"
			        android:textSize="@dimen/m_18sp" >

			        <requestFocus />
			    </EditText>
			</LinearLayout>

		</LinearLayout>
		<LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
			<TextView
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:text="@string/addresslbl"
		     	android:textSize="@dimen/m_18sp"
		     	android:textColor="@color/_Black"
		     	android:layout_gravity="center_vertical"
		     	android:layout_marginBottom="@dimen/m_10dp"/>
			<EditText
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:textSize="@dimen/m_18sp"
		     	android:hint="@string/addresslbl"
		     	android:layout_gravity="center_vertical"
		     	android:id="@+id/address"
		     	android:layout_marginBottom="@dimen/m_10dp"
		     	android:background="@color/_White"
		     	android:onClick="onElementClick"
		     	android:padding="@dimen/m_5dp"/>
		</LinearLayout>
		<LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
			<TextView
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:text="@string/propdtllbl"
		     	android:textSize="@dimen/m_18sp"
		     	android:textColor="@color/_Black"
		     	android:layout_gravity="center_vertical"
		     	android:layout_marginBottom="@dimen/m_10dp"
		     	android:padding="@dimen/m_5dp"/>
			<Spinner 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/proptypedef"
			    android:entries="@array/prptytypeitm"
			    android:layout_marginBottom="@dimen/m_10dp"
			    android:background="@color/_White"
			    android:padding="@dimen/m_5dp"
			    
			    />
			<EditText
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:textSize="@dimen/m_18sp"
		     	android:hint="@string/numbedrm"
		     	android:layout_gravity="center_vertical"
		     	android:id="@+id/numbed"
		     	android:layout_marginBottom="@dimen/m_10dp"
		     	android:background="@color/_White"
		     	android:onClick="onElementClick"
		     	android:padding="@dimen/m_5dp"
		     	/>
			<Spinner 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/isfurnished"
			    android:entries="@array/frunitm"
			    android:layout_marginBottom="@dimen/m_10dp"
			    android:background="@color/_White"
			    android:padding="@dimen/m_5dp"/>
		</LinearLayout>
		
		<LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
			<TextView
			    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content"
		     	android:text="@string/dtinsp"
		     	android:textSize="@dimen/m_18sp"
		     	android:textColor="@color/_Black"
		     	android:layout_gravity="center_vertical"
		     	android:layout_marginBottom="@dimen/m_10dp"/>
			
			<RelativeLayout 
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:layout_marginBottom="@dimen/m_10dp">
			    <EditText
				    android:layout_width="match_parent"
			     	android:layout_height="wrap_content"
			     	android:textSize="@dimen/m_18sp"
			     	android:hint="@string/checkindt"
			     	android:layout_gravity="center_vertical"
			     	android:id="@+id/checkindt"
			     	android:background="@color/_White" 
			        android:cursorVisible="false" 
			        android:focusable="false" 
			        android:focusableInTouchMode="false"
			        android:onClick="onElementClick"
		     		android:clickable="true"
		     		android:padding="@dimen/m_5dp"/>
			    <ImageView 
			        android:layout_width="wrap_content"
		     		android:layout_height="wrap_content"
		     		android:src="@drawable/calendar_black"
		     		android:layout_alignParentRight="true"
		     		android:layout_centerVertical="true"
		     		android:id="@+id/checkinicon"
		     		android:contentDescription="@string/deptdt"
		     		android:onClick="onElementClick"
		     		android:clickable="true"/>
			</RelativeLayout>			
			<RelativeLayout 
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:layout_marginBottom="@dimen/m_10dp">
			    <EditText
				    android:layout_width="match_parent"
			     	android:layout_height="wrap_content"
			     	android:textSize="@dimen/m_18sp"
			     	android:hint="@string/predeptdt"
			     	android:layout_gravity="center_vertical"
			     	android:id="@+id/predeptdt"
			     	android:background="@color/_White"
			     	android:onClick="onElementClick"
		     		android:clickable="true"
			        android:cursorVisible="false" 
			        android:focusable="false" 
			        android:focusableInTouchMode="false"
			        android:padding="@dimen/m_5dp"
			        />
			    <ImageView 
			        android:layout_width="wrap_content"
		     		android:layout_height="wrap_content"
		     		android:src="@drawable/calendar_black"
		     		android:layout_alignParentRight="true"
		     		android:layout_centerVertical="true"
		     		android:contentDescription="@string/predeptdt"
		     		android:id="@+id/predeptdtic"
		     		android:onClick="onElementClick"
		     		android:clickable="true" />
			</RelativeLayout>
			<RelativeLayout 
			    android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:layout_marginBottom="@dimen/m_10dp">
			    <EditText
				    android:layout_width="match_parent"
			     	android:layout_height="wrap_content"
			     	android:textSize="@dimen/m_18sp"
			     	android:hint="@string/deptdt"
			     	android:layout_gravity="center_vertical"
			     	android:id="@+id/deptdt"
			     	android:background="@color/_White"
			     	android:onClick="onElementClick"
			        android:cursorVisible="false" 
			        android:focusable="false" 
			        android:focusableInTouchMode="false"
			        android:padding="@dimen/m_5dp"/>
			    <ImageView 
			        android:layout_width="wrap_content"
		     		android:layout_height="wrap_content"
		     		android:src="@drawable/calendar_black"
		     		android:layout_alignParentRight="true"
		     		android:layout_centerVertical="true"
		     		android:contentDescription="@string/deptdt"
		     		android:id="@+id/deptdtic"
		     		android:onClick="onElementClick"
		     		android:clickable="true"/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	</ScrollView>
	<include layout="@layout/footer"
	    android:id="@+id/navwraper"/>
</RelativeLayout>